# spotify-playlist-toolbox

./: .gitignore  pyproject.toml
spotify_playlist_toolbox/: api_client.py  authorize.py
tests/integration/: test_api_client.py  test_authorize.py
